--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: James Baxter
 # email: your-email@domain.com
 # description: > # this means to ignore newlines until "baseurl:"
-baseurl: "/jeb531" # the subpath of your site, e.g. /blog
-url: "https://www-users.cs.york.ac.uk/jeb531" # the base hostname & protocol for your site
+baseurl: "/~jeb531" # the subpath of your site, e.g. /blog
+url: "https://www-users.york.ac.uk/~jeb531" # the base hostname & protocol for your site
 
 
 # Build settings
