--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: James Baxter
 # email: your-email@domain.com
 # description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/~jeb531" # the subpath of your site, e.g. /blog
-url: "https://www-users.york.ac.uk/~jeb531" # the base hostname & protocol for your site
+url: "https://www-users.york.ac.uk" # the base hostname & protocol for your site
 
 
 # Build settings
